5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/1165/executions/1635_2445.log
== TEST (2019-04-15 12:56:47) 
-- CODE:
escala = float(input("escala e: "))
T = float(input("Valor da temperatura: "))
C = 5/9 * (T - 32)
F = 9/5 * (T - 32) 
 if (escala == F):
	print(round(C,2))
else:
	print(round(C,2))
-- ERROR:
File "XXXX", line 5
    if (escala == F):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:57:05) 
-- CODE:
escala = float(input("escala e: "))
T = float(input("Valor da temperatura: "))
C = 5/9 * (T - 32)
F = 9/5 * (T - 32) 

if (escala == F):
	print(round(C,2))
else:
	print(round(C,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    escala = float(input())
ValueError: could not convert string to float: 'C'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:57:34) 
-- CODE:
escala = float(input("escala e F: "))
T = float(input("Valor da temperatura: "))
C = 5/9 * (T - 32)
F = 9/5 * (T - 32) 

if (escala == F):
	print(round(C,2))
else:
	print(round(C,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    escala = float(input())
ValueError: could not convert string to float: 'C'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:57:52) 
-- CODE:
escala = float(input("escala e f: "))
T = float(input("Valor da temperatura: "))
C = 5/9 * (T - 32)
F = 9/5 * (T - 32) 

if (escala == F):
	print(round(C,2))
else:
	print(round(C,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    escala = float(input())
ValueError: could not convert string to float: 'C'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:58:28) 
-- CODE:
escala = input("escala e f: "))
T = float(input("Valor da temperatura: "))
C = 5/9 * (T - 32)
F = 9/5 * (T - 32) 

if (escala == F):
	print(round(C,2))
else:
	print(round(C,2))
-- ERROR:
File "XXXX", line 1
    escala = input())
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:59:39) 
-- CODE:
escala = float(input("insira a escala em f: "))
T = int(input("Valor da temperatura: "))
C = 5/9 * (T - 32)
F = 9/5 * (T - 32) 

if (escala == F):
	print(round(C,2))
else:
	print(round(C,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    escala = float(input())
ValueError: could not convert string to float: 'C'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:00:06) 
-- CODE:
escala = int(input("insira a escala em f: "))
T = int(input("Valor da temperatura: "))
C = 5/9 * (T - 32)
F = 9/5 * (T - 32) 

if (escala == F):
	print(round(C,2))
else:
	print(round(C,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    escala = int(input())
ValueError: invalid literal for int() with base 10: 'C'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:00:39) 
-- CODE:
escala = input("insira a escala em f: ")
T = int(input("Valor da temperatura: "))
C = 5/9 * (T - 32)
F = 9/5 * (T - 32) 

if (escala == F):
	print(round(C,2))
else:
	print(round(C,2))
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:00:52) 
-- CODE:
escala = input("insira a escala em f: ")
T = int(input("Valor da temperatura: "))
C = 5/9 * (T - 32)
F = 9/5 * (T - 32) 

if (escala == F):
	print(round(C,2))
else:
	print(round(C,2))
-- EXECUTION TIME:
0.211804
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:01:51) 
-- CODE:
escala = input("insira a escala em f: ")
T = int(input("Valor da temperatura: "))
C = 5/9 * (T - 32)
F = 9/5 * (T - 32) 

if (escala == F):
	print(round(C,2))
else:
	print(round(C,2))
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:02:23) 
-- CODE:
escala = input("insira a escala em f: ")
T = int(input("Valor da temperatura: "))
C = 5/9 * (T - 32)
F = 9/5 * (T - 32) 

if (escala == F):

else:
	print(round(C,2))
-- ERROR:
File "XXXX", line 8
    else:
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:02:57) 
-- CODE:
escala = input("insira a escala em f: ")
T = int(input("Valor da temperatura: "))
C = 5/9 * (T - 32)
F = 9/5 * (T - 32) 

if (escala == F):
	print(round(C,2))
else:
	print(round(C,2))
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:04:27) 
-- CODE:
escala = input("insira a escala em f: ")
T = int(input("Valor da temperatura: "))
C = 5/9 * (T - 32)
F = 9/5 * (T + 32) 

if (escala == F):
	print(round(F,2))
else:
	print(round(C,2))
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:04:52) 
-- CODE:
escala = input("insira a escala em f: ")
T = int(input("Valor da temperatura: "))
C = 5/9 * (T - 32)
F = 9/5 * (T + 32) 

if (escala == F):
	print(round(F,2))
else:
	print(round(C,2))
-- EXECUTION TIME:
0.157227
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:06:07) 
-- CODE:
escala = input(input("insira a escala em f: "))
T = int(input("Valor da temperatura: "))
C = 5/9 * (T - 32)
F = 9/5 * (T + 32) 

if (escala == F):
	print(round(F,2))
else:
	print(round(C,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    T = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:06:21) 
-- CODE:
escala = input(input("insira a escala em f: "))
T = int(input("Valor da temperatura: "))
C = 5/9 * (T - 32)
F = 9/5 * (T + 32) 

if (escala == F):
	print(round(F,2))
else:
	print(round(C,2))
-- EXECUTION TIME:
0.207481
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2445/main.py", line 2, in <module>
    T = int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:06:47) 
-- CODE:
escala = int(input("insira a escala em f: "))
T = int(input("Valor da temperatura: "))
C = 5/9 * (T - 32)
F = 9/5 * (T + 32) 

if (escala == F):
	print(round(F,2))
else:
	print(round(C,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    escala = int(input())
ValueError: invalid literal for int() with base 10: 'C'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:07:23) 
-- CODE:
escala = input("insira a escala em f: ")
T = int(input("Valor da temperatura: "))
C = 5/9 * (T - 32)
F = 9/5 * (T + 32) 

if (escala == F):
	print(round(F,2))
else:
	print(round(C,2))
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:07:52) 
-- CODE:
escala = input("insira a escala em f: ")
T = int(input("Valor da temperatura: "))
C = 5/9 * (T - 32)
F = 9/5 * (T + 32) 

if (escala == C):
	print(round(F,2))
else:
	print(round(C,2))
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:14:44) 
-- CODE:
escala = input("insira a escala em f: ")
T = int(input("Valor da temperatura: "))

C = 5/9 * (T - 32)
F = 9/5 * (T + 32) 

if (escala == C):
	print(round(F,2))
else:
	print(round(C,2))
-- EXECUTION TIME:
0.143358
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:46:46) 
-- CODE:
escala = input("insira a escala em F/C: ")
T = int(input("Valor da temperatura:" ))

C = 5/9 * (T - 32)
F = 9/5 * (T + 32) 

if (escala == C):
	print(round(F,2))
else:
	print(round(C,2))
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:47:48) 
-- CODE:
escala = input("insira a escala em F/C: ")
T = int(input("Valor da temperatura:" ))

C = 5/9 * (T - 32)
F = (1.8 * T) + 32

if (escala == C):
	print(round(F,2))
else:
	print(round(C,2))
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:48:04) 
-- CODE:
escala = input("insira a escala em F/C: ")
T = int(input("Valor da temperatura:" ))

C = 5/9 * (T - 32)
F = (1.8 * T) + 32

if (escala == C):
	print(round(F,2))
else:
	print(round(C,2))
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:48:27) 
-- CODE:
escala = input("insira a escala em F/C: ")
T = int(input("Valor da temperatura:" ))

C = 5/9 * (T - 32)
F = (1.8 * T) + 32

if (escala == C):
	print(round(F,2))
else:
	print(round(C,2))
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:50:31) 
-- CODE:
escala = input("insira a escala em F/C: ")
T = int(input("Valor da temperatura:" ))

C = 5/9 * (T - 32)
F = (9 *( T + 32))/5

if (escala == C):
	print(round(F,2))
else:
	print(round(C,2))
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:50:33) 
-- CODE:
escala = input("insira a escala em F/C: ")
T = int(input("Valor da temperatura:" ))

C = 5/9 * (T - 32)
F = (9 *( T + 32))/5

if (escala == C):
	print(round(F,2))
else:
	print(round(C,2))
-- EXECUTION TIME:
0.164157
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:50:34) 
-- CODE:
escala = input("insira a escala em F/C: ")
T = int(input("Valor da temperatura:" ))

C = 5/9 * (T - 32)
F = (9 *( T + 32))/5

if (escala == C):
	print(round(F,2))
else:
	print(round(C,2))
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:50:49) 
-- CODE:
escala = input("insira a escala em F/C: ")
T = int(input("Valor da temperatura:" ))

C = 5/9 * (T - 32)
F = (9 *( T + 32))/5

if (escala == C):
	print(round(F,2))
else:
	print(round(C,2))
-- EXECUTION TIME:
0.166277
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:51:43) 
-- CODE:
escala = input("insira a escala em F/C: ")
T = int(input("Valor da temperatura:" ))

C = 5/9 * (T - 32)
F = (9 * T)/5 + 32

if (escala == C):
	print(round(F,2))
else:
	print(round(C,2))
-- EXECUTION TIME:
0.187291
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:51:44) 
-- CODE:
escala = input("insira a escala em F/C: ")
T = int(input("Valor da temperatura:" ))

C = 5/9 * (T - 32)
F = (9 * T)/5 + 32

if (escala == C):
	print(round(F,2))
else:
	print(round(C,2))
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:51:50) 
-- CODE:
escala = input("insira a escala em F/C: ")
T = int(input("Valor da temperatura:" ))

C = 5/9 * (T - 32)
F = (9 * T)/5 + 32

if (escala == C):
	print(round(F,2))
else:
	print(round(C,2))
-- EXECUTION TIME:
0.142199
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:52:08) 
-- CODE:
escala = input("insira a escala em F/C: ")
T = int(input("Valor da temperatura:" ))

C = 5/9 * (T - 32)
F = (9 * T)/5 + 32

if (escala == "C"):
	print(round(F,2))
else:
	print(round(C,2))
-- EXECUTION TIME:
0.139433
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
